<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".cookbook.home.HomeFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="@color/accent"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/accent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_appetizers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appetizers" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_desserts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desserts" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_courses" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/others" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/app_open_activity_add_recipe"
        android:src="@drawable/ic_add_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>