<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/new_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/step"
                android:textColor="@color/primary_light"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/step_count"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:textColor="@color/primary_light"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/duration"
                android:textColor="@color/primary_light"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_timer" />

            <EditText
                android:id="@+id/step_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_off_white"
                android:gravity="center"
                android:hint="@string/min"
                android:inputType="number"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="16sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:layout_weight="2"
            android:background="@drawable/background_off_white"
            android:gravity="start"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>