<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    tools:context=".cookbook.account.ui.AccountFragment">

    <ImageView
        android:id="@+id/recipe_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primary"
        android:contentDescription="@string/recipe_image"
        android:scaleType="centerCrop"
        android:src="@drawable/default_image"
        app:layout_constraintBottom_toTopOf="@id/guideline15"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primary_dark_blur"
        app:layout_constraintBottom_toTopOf="@id/guideline15"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="2"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideline15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/guideline15">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="2"
                            android:text="@string/change_your_account_password"
                            android:textColor="@color/primary_light"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/expand"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_expand_more" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <EditText
                            android:id="@+id/current_password"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp"
                            android:autofillHints="@string/password"
                            android:background="@drawable/background_off_white"
                            android:hint="@string/current_password"
                            android:inputType="textPassword"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="@color/primary_light"
                            android:textColorHint="@color/hint"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp"
                            android:autofillHints="@string/password"
                            android:background="@drawable/background_off_white"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="@color/primary_light"
                            android:textColorHint="@color/hint"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp"
                            android:autofillHints="@string/password"
                            android:background="@drawable/background_off_white"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="@color/primary_light"
                            android:textColorHint="@color/hint"
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/save"
                            style="@style/ButtonAccentStyle"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/save"
                            android:textColor="@color/white" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_theme"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@id/cv_password">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="2"
                            android:text="@string/change_the_app_theme"
                            android:textColor="@color/primary_light"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/expand2"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_expand_more" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_theme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <Switch
                            android:id="@+id/orange"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/theme_orange"
                            android:textColor="@color/primary_light"
                            android:textSize="16sp"
                            android:theme="@style/OrangeSwitch"
                            app:layout_constraintTop_toBottomOf="@id/recipe_time"
                            tools:ignore="UseSwitchCompatOrMaterialXml" />

                        <Switch
                            android:id="@+id/blue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/theme_blue"
                            android:textColor="@color/primary_light"
                            android:textSize="16sp"
                            android:theme="@style/BlueSwitch"
                            app:layout_constraintTop_toBottomOf="@id/recipe_time"
                            tools:ignore="UseSwitchCompatOrMaterialXml" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@id/cv_theme">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <LinearLayout
                        android:id="@+id/log_out"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_log_out" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:layout_weight="2"
                            android:text="@string/log_out"
                            android:textColor="@color/primary_light"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>